@@ -1,3 +1,8 @@
+2009-02-02  Gabor Csardi  <csardi@szaffi>
+
+	* interfaces/R/igraph/R/structural.properties.R
+	(alpha.centrality) : weights can be given in the usual form now
+
 2009-01-16  Gabor Csardi  <csardi@szaffi>
 
 	* interfaces/R/igraph/R/structure.generators.R (graph.bipartite) : 
